Mark ExitGuard as deprecated