@@ -166,6 +166,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.3.0</version>
+                <configuration>
+                    <!-- Suppress warning about loading byte-buddy-agent -->
+                    <argLine>-XX:+EnableDynamicAgentLoading ${argLine}</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
